@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-21T16:34:04Z",
-  "count_outdated" : 347,
-  "uniques_outdated" : 211,
+  "timestamp" : "2022-10-23T02:02:09Z",
+  "count_outdated" : 348,
+  "uniques_outdated" : 212,
   "count" : 353,
   "uniques" : 216,
   "clones" : [
-    {
-      "timestamp": "2022-10-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-12T00:00:00Z",
       "count": 4,
